Remove 'Pre-Recommendation' Page, add back button on the recommendations page, Make Sure Logo is Centered, Logo Covers Calculating Results Page

--- a/assets/quiz-custom.scss
+++ b/assets/quiz-custom.scss
@@ -226,6 +226,8 @@ html, body {
         width: 100%;
         margin: 0;
         margin-top: 85px;
+        opacity: 0;
+        margin: 50px 0 0;
     }
     .calculating-body img {
         @media (max-width: 798px) {
@@ -368,11 +370,7 @@ html, body {
 .calculating-announcement-bar {
     text-align: center;
     background: #272C2F;
-    margin-left: -15px;
-    margin-right: -15px;
     color: white;
-    margin-top: 30px;
-    margin-bottom: 30px;
     span {
         font-family: 'DM Sans', sans-serif;
         font-style: normal;
